--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hapi/boom": "^10.0.1",
     "axios": "^1.11.0",
     "express": "^5.1.0",
+    "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0"
   }
 }
